# business_with_ai

./: .gitmodules  README.md  pyproject.toml  tatus  tatus --porcelain
.cursor/: rules
chatting_room_with_ai/: chatting_room_with_ai.md
monitors/: ensure_service_monitored.sh
prompts/: chatting_room_with_ai.md  prompts.md  prompts_for_human.md
prompts/chatting_room_with_ai/: chatting_room_with_ai.md
scripts/: ensure_docker_build.sh  ensure_docker_compose_install.sh  ensure_docker_install.sh  ensure_docker_run.sh  ensure_docker_stop.sh  ensure_service_operated.sh  ensure_service_shutdowned.sh  ensure_service_test.sh  run_frontend_login_test.bat  run_frontend_tests.bat  setup_and_run_frontend_tests.py
services/hospital_workers/: .gitmodules  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
services/hospital_workers/api-service/: Dockerfile  Dockerfile.dev  Dockerfile.prod  main.py  pyproject.toml
services/hospital_workers/api_server/: pyproject.toml
services/hospital_workers/nginx/: nginx.conf  nginx.dev.conf  nginx.prod.conf
services/hospital_workers/scripts/: ensure_api_test.py  ensure_containers_build.sh  ensure_containers_compose_install.sh  ensure_containers_install.sh  ensure_containers_run.sh  ensure_containers_stop.sh  ensure_login_routine_and_open.py  (+5 more)
services/scripts/: ensure_service_operated.sh  ensure_services_operated.sh
temp/scripts_origin/: ensure_services_operated.sh
tests/: frontend_test_results.json  test_frontend_all.py  test_frontend_login_routine_via_selenium_at_windows.py  test_frontend_selenium.py
(+12 files in other folders)
